kahuna/public/stylesheets/main.css
/* ... */
/* Hacky pointer to some element above */
.validity--point-up {
    position: relative;
}
.validity--point-up::before {
    content: "";
    border-left: 20px solid rgba(0, 0, 0, 0);
    border-right: 20px solid rgba(0, 0, 0, 0);
    position: absolute;
    top: -9px;
    right: 30px;
    z-index: 200;
    border-bottom-width: 10px;
    border-bottom-style: solid;
}
.validity--invalid::before {
    border-bottom-color: red;
}
.validity--warning::before {
    border-bottom-color: orange;
}

/* ==========================================================================
   Results bar
   ========================================================================== */

.results-toolbar {
    font-size: 1.4rem;
    margin: 0 0 0;
    height: 35px;
    display: flex;
    background-color: #333;
    width: 100%;
    border-bottom: 1px solid #565656;
    position: fixed;
    z-index: 30;
    left: 0;
}

.results-toolbar__right {
    margin-left: auto;
    line-height: 35px;
}

.results-toolbar-item {
    vertical-align: middle;
    border-width: 0 1px;
    border-color: #565656;
    border-style: solid;
    position: relative;
    height: 35px;
    line-height: 35px;
    white-space: nowrap;
}

.results-toolbar-item:hover {
    background-color: #666666;
}

.results-toolbar-item--static,
.results-toolbar-item gr-icon-label {
    padding: 0 10px;
}

.results-toolbar-item--inline {
  display: flex;
  align-items: center;
  padding-left: 3.5px;
}

.results-toolbar-item--left {
    border-left: 0;
}

.results-toolbar-item--right {
    border-right: 0;
}

.results-toolbar-item--disabled {
    color: #666;
}

.results-toolbar-item--no-hover:hover {
    background: #333;
}

.results-toolbar-item--active {
    background-color: #444;
}

.results-toolbar-item--disabled:hover {
    color: #666;
    background-color: transparent;
}

/* --static is for top bar items that perform no action, only display information */
.results-toolbar-item--static:hover {
    background-color: transparent;
}

.results-toolbar-item__clear-selection {
    width: 105px;
}

.results-toolbar-item__sort-direction {
    padding: 0px;
}

.results-toolbar-item__progress {
    /* updated in JS to show progress */
    background: linear-gradient(90deg, #00adee 0%, transparent 0%);
    color: white;
}

.image-results-count__new {
    font-family: inherit;
    background-color: #00adee;
    color: white;
    display: inline-block;
    padding: 2px 4px;
    border-radius: 2px;
    margin-left: 5px;
}

.image-results-count {
    border-left: 0;
    line-height: 35px;
}

.image-results-count,
.sort-direction {
    display: inline-block;
}


.image-results-more {
    margin: 40px 0;
    text-align: center;
}
.image-results-more__heading {
    font-size: 36px;
}
.image-results-more__instructions {
    font-size: 20px;
}

.image-loading-results,
.image-no-results {
    font-size: 3rem;
    text-align: center;
    margin-top: 4rem;
}

.image-loading-results {
    color: #999;
}


/* ==========================================================================
   Preview
   ========================================================================== */
.preview {
    position: relative;
}

.preview__link,
.preview__no-link {
    display: block;
    height: 200px;
}

.preview__link--large, .preview__no-link--large {
    height: auto;
    max-height: calc(100vh - 190px);
    max-width: 100%;
}

.preview__image {
    display: block;
    max-width: 100%;
    max-height: 100%;
    margin: 0 auto;
    pointer-events: none;
}

.preview__image.preview__image--staff {
    border: 10px solid #005689;
    box-sizing: border-box;
}

.preview__info {
    font-size: 1.3rem;
    padding-left: 10px;
    margin: 5px 0;
}
.preview__info-flex {
    font-size: 1.3rem;
    padding-left: 7px;
    margin: 5px 0;
    display: flex;
}
.preview__info-inline {
    box-sizing: border-box;
    width: 50%;
    display: inline-block;
}
.align-right {
    float: right;
}

.preview__info--large {
    font-size: 1.4rem;
    max-width: 800px;
    margin: 0 auto;
}

.preview__description {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    margin: 0;
}

.preview__description--gallery {
    white-space: normal;
}

/*
FIXME: this is a little targeted
FIXME: what to do with touch devices
*/

.preview__labeller {
    /*25px - auto height of div on hover, stops shifting when off hover */
    height: 25px;
    white-space: nowrap;
    overflow: hidden;
}

.preview .gr-add-label--inactive {
    display: none;
}

.preview__upload-time {
    font-size: 1.2rem;
    color: #999;
}

.preview__has-crops {
    cursor: help;
}

.preview__collections {
    margin-right: 2px;
    height: 25px;
    display: block;
    white-space: nowrap;
}

.preview__collections__collection {
    /*important to overwrite tooltips styling*/
    display: inline-flex !important;
    margin: 0 5px 5px 0;
}

.preview__collections__collection__value,
.preview__collections__collection__remove {
    color: #fff;
    padding: 0 5px;
    margin-left: 2px;
    border-radius: 2px;
    /*this will be overwritten if the collection has a background-colour*/
    background-color: #555;
}

.preview__collections__collection__remove {
    margin-left: -1px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.preview__collections__collection__value:hover,
.preview__collections__collection__remove:hover {
    /*need important to overwrite the inline style*/
    background-color: #fff !important;
    color: black;
}

.preview__collections__collection__apply-all {
    margin-left: 10px;
    line-height: 20px;
    font-size: 1.6rem;
}

.preview__cost {
    margin-left: 5px;
}

.preview__bottom-bar {
    font-size: 1.4rem;
    margin-top: 5px;
}

.preview__bottom-bar--large {
    font-size: 1.6rem;
    max-width: 800px;
    margin: 0 auto 40px;
}

.preview__quick-select {
    cursor: pointer;
}

.preview__select {
  cursor: default;
}
/* ... */

